syntax = "proto3";

option go_package = "source/proto";

package proto;

service PostArticleService{
    rpc AddArticle(AddArticleRequest) returns (AddArticleReply) {};
    rpc DelArticle(DelArticleRequest) returns (DelArticleReply) {};
}

message AddArticleRequest {
    int64  userId = 1;
    string content = 2;
    string visibility = 3;
}

message AddArticleReply {
    bool success = 1;
}

message DelArticleRequest {
    int64 userId = 1;
    int64 articleId = 2;
}

message DelArticleReply {
    bool success = 1;
}
